# InterpreterFormalLang

./: CMakeLists.txt  Readme.md
lib/: enums.h  interpreter.h  machine.h  parser.h  syntax_tree.h
samples/: binpow.cpm  gcd.cpm  multisum.cpm  sum.cpm
src/: CMakeLists.txt  interp_bison.y  interp_flex.l  main.cpp  syntax_tree.hpp
testing/: CMakeLists.txt
testing/tests/: CMakeLists.txt  test.cpp  test_data.test
